# YOLOV8_counter

./: .gitignore  PKGBUILD  README.md  package-lock.json  package.json  spotify-cli-1.0.0-1-x86_64.pkg.tar.zst  spotify-cli.install  tracking.py  turbo.json
apps/desktop/: package.json
apps/desktop/src-tauri/: tauri.conf.json
apps/mobile/: app.json  package.json
apps/server/: index.ts  package.json  root.ts  tsconfig.json
apps/web/: package.json
desktop/: Cargo.toml
desktop/src/: app.rs
desktop/src-tauri/: Cargo.toml
desktop/src/components/: tasks.rs
docs/: apis.txt
pkg/spotify-cli/: .BUILDINFO  .MTREE  .PKGINFO
spotify_cli/: Cargo.toml  debian
spotify_cli/src/: main.rs
spotify_cli/src/auth/: login.rs
website/: Cargo.toml
